# multi-agent-system

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.cloud.yml  docker-compose.yml  ingest_remote.sh  pyproject.toml  startup.sh  startup_raw.sh
eval/: golden_dataset.json  run_eval.py
scripts/: ingest_remote.sh  startup_raw.sh
src/: config.py  ingest.py  ollama_client.py  qdrant_client.py  retry.py  schemas.py  server.py  sparse.py
src/agents/: __init__.py  base.py  orchestrator.py  rag_specialist.py  research_worker.py  synthesis_agent.py
src/clients/: ollama_client.py  qdrant_client.py
src/memory/: chat_history.py  long_term.py  short_term.py
src/tools/: arxiv_search.py  calculator.py  rag_search.py  retrieval.py  unit_converter.py  web_search.py
static/: index.html
tests/: test_calculator.py  test_ingest.py  test_ollama_client.py  test_schemas.py  test_unit_converter.py
